--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,29 @@
-# This file is available at https://gist.github.com/y0ssar1an/df2dab474520c4086926f672c52db139
-
+# A minimum version of this file is available at https://gist.github.com/y0ssar1an/df2dab474520c4086926f672c52db139
+​
 # use the latest ubuntu environment (18.04) available on travis
 dist: bionic
-
+​
 language: go
-
+​
+env: GO111MODULE=on
+​
 # You don't need to test on very old versions of the Go compiler. It's the user's
 # responsibility to keep their compiler up to date.
 go:
   - 1.13.x
-
+​
 # Only clone the most recent commit.
 git:
   depth: 1
-
+​
 # Skip the install step. Don't `go get` dependencies. Only build with the code
 # in vendor/
 install: true
-
+​
 # Don't email me the results of the test runs.
 notifications:
   email: false
-
+​
 # Anything in before_script that returns a nonzero exit code will flunk the
 # build and immediately stop. It's sorta like having set -e enabled in bash.
 # Make sure you've pinned the version of golangci-lint by running this command
@@ -31,10 +33,11 @@ notifications:
 #   github.com/golangci/golangci-lint v1.21.0
 before_script:
   - go install github.com/golangci/golangci-lint/cmd/golangci-lint
-
+  - go get github.com/mattn/goveralls
+​
 # script always runs to completion (set +e). If we have linter issues AND a
 # failing test, we want to see both. Configure golangci-lint with a
-# .golangci.yml file at the top level of your repo.
+# .golangci.yml file at the top level of your repo
 script:
   - golangci-lint run       # run a bunch of code checkers/linters in parallel
-  - go test -v -race ./...  # Run all the tests with the race detector enabled
+  - $GOPATH/bin/goveralls -service=travis-ci
