--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# This file is available at https://gist.github.com/y0ssar1an/df2dab474520c4086926f672c52db139
+# A minimum version of this file is available at https://gist.github.com/y0ssar1an/df2dab474520c4086926f672c52db139
 
 # use the latest ubuntu environment (18.04) available on travis
 dist: bionic
@@ -31,10 +31,11 @@ notifications:
 #   github.com/golangci/golangci-lint v1.21.0
 before_script:
   - go install github.com/golangci/golangci-lint/cmd/golangci-lint
+  - go get github.com/mattn/goveralls
 
 # script always runs to completion (set +e). If we have linter issues AND a
 # failing test, we want to see both. Configure golangci-lint with a
 # .golangci.yml file at the top level of your repo.
 script:
   - golangci-lint run       # run a bunch of code checkers/linters in parallel
-  - go test -v -race ./...  # Run all the tests with the race detector enabled
+  - $GOPATH/bin/goveralls -service=travis-ci
