update env file

--- a/.sample.env
+++ b/.sample.env
@@ -1,2 +1,6 @@
-JWT_SECRET_KEY=secretekeyhere
-SESSION_KEY=sessionkey
+FRONTEND_BASE_URL=
+FRONTEND_REDIRECT_URL=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+JWT_SECRET_KEY=
+SESSION_KEY=
